@@ -3,15 +3,24 @@ package com.reto.franchise.mongo;
 import com.reto.franchise.model.exception.BusinessException;
 import com.reto.franchise.model.franchise.Franchise;
 import com.reto.franchise.model.franchise.gateways.FranchiseRepository;
+import com.reto.franchise.mongo.document.BranchDocument;
+import com.reto.franchise.mongo.document.ProductDocument;
 import com.reto.franchise.mongo.mapper.FranchiseMapper;
 import com.reto.franchise.mongo.repository.FranchiseMongoDBRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
 @Component
+@Slf4j
 @RequiredArgsConstructor
 public class FranchiseMongoAdapter implements FranchiseRepository {
 
@@ -38,33 +47,52 @@ public class FranchiseMongoAdapter implements FranchiseRepository {
     @CircuitBreaker(name = "mongoCircuitBreaker", fallbackMethod = "finByIdFallback")
     public Mono<Franchise> findByIdWithMaxStockProducts(String id) {
         return mongoRepository.findById(id)
-                .map(doc -> {
-                    doc.setBranches(doc.getBranches() != null ? doc.getBranches().stream()
-                            .map(branchDoc -> {
-                                if (branchDoc.getProducts() != null && !branchDoc.getProducts().isEmpty()) {
-                                    var maxProduct = branchDoc.getProducts().stream()
-                                            .max((p1, p2) -> Integer.compare(
-                                                    p1.getStock() != null ? p1.getStock() : 0,
-                                                    p2.getStock() != null ? p2.getStock() : 0))
-                                            .orElse(null);
-                                    if (maxProduct != null) {
-                                        branchDoc.setProducts(java.util.List.of(maxProduct));
-                                    }
-                                }
-                                return branchDoc;
-                            })
-                            .collect(java.util.stream.Collectors.toList()) : null);
-                    return doc;
-                })
+                .flatMap(doc -> Flux.fromIterable(Optional.ofNullable(doc.getBranches()).orElse(Collections.emptyList()))
+                        .flatMap(this::toBranchWithMaxStockProduct)
+                        .collectList()
+                        .map(branches -> {
+                            doc.setBranches(branches);
+                            return doc;
+                        }))
                 .map(mapper::toDomain);
     }
 
+    @Override
+    @CircuitBreaker(name = "mongoCircuitBreaker", fallbackMethod = "findAllFallback")
+    public Flux<Franchise> findAll() {
+        return mongoRepository.findAll()
+                .map(mapper::toDomain);
+    }
+
+    @SuppressWarnings("unused")
     public Mono<Franchise> finByIdFallback(String id, Throwable error) {
+        log.warn("Fallback findById activado para franquicia id={}", id, error);
         return Mono.error(new BusinessException("Base de datos no disponible temporalmente. Intente más tarde."));
     }
 
+    @SuppressWarnings("unused")
     public Mono<Franchise> saveFallback(Franchise franchise, Throwable error) {
-        System.out.println("🚨 Fallo al guardar la franquicia: " + franchise.getName());
+        log.error("Fallback save activado para franquicia={}", franchise.getName(), error);
         return Mono.error(new BusinessException("Error de conexión al guardar en la base de datos."));
+    }
+
+    @SuppressWarnings("unused")
+    public Flux<Franchise> findAllFallback(Throwable error) {
+        log.warn("Fallback findAll activado", error);
+        return Flux.error(new BusinessException("Base de datos no disponible temporalmente. Intente más tarde."));
+    }
+
+    private Mono<BranchDocument> toBranchWithMaxStockProduct(BranchDocument branchDocument) {
+        return Flux.fromIterable(Optional.ofNullable(branchDocument.getProducts()).orElse(Collections.emptyList()))
+                .reduce((first, second) -> normalizeStock(first) >= normalizeStock(second) ? first : second)
+                .map(maxProduct -> {
+                    branchDocument.setProducts(List.of(maxProduct));
+                    return branchDocument;
+                })
+                .defaultIfEmpty(branchDocument);
+    }
+
+    private int normalizeStock(ProductDocument productDocument) {
+        return productDocument.getStock() != null ? productDocument.getStock() : 0;
     }
 }
